
[package]
name = "did-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mysql = "*"
actix-web = "4"
actix-files = "0.6.0"

serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "mysql"] }
#时间
chrono = {version = "0.4.19",features=["serde"]}