
[package]
name = "did-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mysql = "*"
actix-web = "4"
actix-files = "0.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
sqlx = { version = "0.6.2", features = ["runtime-actix-native-tls", "mysql","time","chrono"] }
#时间
chrono = {version = "0.4.19",features=["serde"]}

jsonwebtoken = "8.1.0"

env_logger = "0.9.0"

# redis异步库
mobc-redis = "0.7.0"
mobc = "0.7.2"

#提供测试模块
tokio = { version = "1.21.0", features = ["full"] }

[lib]
path = "./src/service/lib.rs"
db = "./src/db/lib.rs"